--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.3.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/svelte": "^1.0.2",
+        "@sveltejs/vite-plugin-svelte": "^2.0.4",
+        "svelte": "^3.58.0"
     }
 }
