Initial commit for laravel 11 versio

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "autoprefixer": "^10.4.14",
         "axios": "^1.6.3",
         "laravel-vite-plugin": "^1.0.0",
